--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button id = "*">*</button>
         <button id = "/">/</button>
         <button id = "=">=</button>
+        <button id = ".">.</button>
 
         
     </div>
