Add modulo and backspace functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class = "display"> TEST Vumxer34445545</div>
     <div class="buttons">
-        <button id = "clear">clear</button>
+        <button id = "A.C">A.C</button>
         <button id = "0">0</button>
         <button id = "1">1</button>
         <button id = "2">2</button>
@@ -26,6 +26,8 @@
         <button id = "/">/</button>
         <button id = "=">=</button>
         <button id = ".">.</button>
+        <button id = "C">C</button>
+        <button id = "%">%</button>
 
         
     </div>
