Create a style file make small change in javaScript

--- a/index.html
+++ b/index.html
@@ -5,29 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="calculator.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = "display"> TEST Vumxer34445545</div>
-    <div class="buttons">
-        <button id = "A.C">A.C</button>
-        <button id = "0">0</button>
-        <button id = "1">1</button>
-        <button id = "2">2</button>
-        <button id = "3">3</button>
-        <button id = "4">4</button>
-        <button id = "5">5</button>
-        <button id = "6">6</button>
-        <button id = "7">7</button>
-        <button id = "8">8</button>
-        <button id = "9">9</button>
-        <button id = "+">+</button>
-        <button id = "-">-</button>
-        <button id = "*">*</button>
-        <button id = "/">/</button>
-        <button id = "=">=</button>
-        <button id = ".">.</button>
+    <div class="calculator">
+        <div class = "display"> 0</div>
+        <div class="buttons">
+            <button id = "A.C">A.C</button>
+            <button id = "C">C</button>
+            <button id = "0">0</button>
+            <button id = "1">1</button>
+            <button id = "2">2</button>
+            <button id = "3">3</button>
+            <button id = "4">4</button>
+            <button id = "5">5</button>
+            <button id = "6">6</button>
+            <button id = "7">7</button>
+            <button id = "8">8</button>
+            <button id = "9">9</button>
+            <button id = "+">+</button>
+            <button id = "-">-</button>
+            <button id = "*">*</button>
+            <button id = "/">/</button>
+            <button id = "=">=</button>
+            <button id = ".">.</button>
 
-        
+            
+        </div>
     </div>
 </body>
 </html>
