--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <script src="calculator.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,24 +11,35 @@
     <div class="calculator">
         <div class = "display"> 0</div>
         <div class="buttons">
-            <button id = "A.C">A.C</button>
-            <button id = "C">C</button>
-            <button id = "0">0</button>
-            <button id = "1">1</button>
-            <button id = "2">2</button>
-            <button id = "3">3</button>
-            <button id = "4">4</button>
-            <button id = "5">5</button>
-            <button id = "6">6</button>
-            <button id = "7">7</button>
-            <button id = "8">8</button>
-            <button id = "9">9</button>
-            <button id = "+">+</button>
-            <button id = "-">-</button>
-            <button id = "*">*</button>
-            <button id = "/">/</button>
-            <button id = "=">=</button>
-            <button id = ".">.</button>
+            <div class="row">
+                <button id = "top">A.C</button>
+                <button id = "top">C</button>
+                <button id = "top">%</button>
+                <button id = "operator">/</button>
+            </div>
+            <div class="row">
+                <button id = "7">7</button>
+                <button id = "8">8</button>
+                <button id = "9">9</button>
+                <button id = "operator">*</button>
+            </div>
+            <div class="row">
+                <button id = "4">4</button>
+                <button id = "5">5</button>
+                <button id = "6">6</button>
+                <button id = "operator">-</button>
+            </div>
+            <div class="row">
+                <button id = "1">1</button>
+                <button id = "2">2</button>
+                <button id = "3">3</button>
+                <button id = "operator">+</button>
+            </div>
+            <div class="row">
+                <button id = "zero">0</button>
+                <button id = "dot">.</button>
+                <button id = "operator">=</button>
+            </div>
 
             
         </div>
